--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 
+orbs:
+  python: circleci/python@1.5.0
+
 jobs:
   build-and-test: # This is the name of the job, feel free to change it to better match what you're trying to do!
     docker:
