--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt 
+      - install-other-packages:
+          name: Install nginx
+          command: apk install -y nginx
       - run:
           name: Run the dev test script
           command: ls -l; pwd; uname -a; py.test -v test_python_script.py
