--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
           # pip-dependency-file: test-requirements.txt 
       - run:
           name: Run the dev test script
-          command: ls -l; pwd; uname -a; py.test -v test_python_script.py
+          #command: ls -l; pwd; uname -a; py.test -v test_python_script.py
+          command: py.test -v test_python_script.py
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
